syntax = "proto3";

package user;

service UserService {
    rpc Create(User) returns (User);
    rpc Get(ByIdReq) returns (User);
    rpc List(ListReq) returns (ListResp);
    rpc Update(User) returns (User);
    rpc Delete(ByIdReq) returns (EmptyResp);
}

message EmptyResp {}

message User {
    int64  id = 1;
    string first_name = 2;
    string last_name = 3;
}

message ByIdReq {
    int64 id = 1;
}

message ListReq {
    int64 page = 1;
    int64 limit = 2;
}

message ListResp {
    repeated User users = 1;
    int64 count = 2;
}
